--- a/02-华氏度转摄氏度.html
+++ b/02-华氏度转摄氏度.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			var fahrenheitDegree = 80;
+			var fahrenheitDegree = prompt("请输入华氏度");
 			var degreeCelsius = 5/9.0*(fahrenheitDegree-32)*1000;
 			alert(Math.round(degreeCelsius)/1000);
 		</script>
