--- a/要不要分号.html
+++ b/要不要分号.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -5,11 +6,8 @@
 		<title></title>
 	</head>
 	<body>
-		<script>
-			var a=b=10;
-			(function(){var a=b=20})();
-			console.log(b);
-			t
+		<script type="text/javascript">
+			var num1="1" ;var num2=1 alert(num1-num2);
 		</script>
 	</body>
 </html>
