--- a/05-判断成绩等级.html
+++ b/05-判断成绩等级.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 		<script>
-			var num = prompt("输入体育成绩");
+			var num = prompt("输入成绩");
 			if(num==100){alert("小伙子，NB！")}
 			else if(num>=90){alert("还行")}
-				else if(num>=60){alert("佩琪")}
+				else if(num>=60){alert("你是只佩琪")}
 					else if(num>=0){alert("自杀吧")}
 						else{alert("请正确输入一个数字")};
 		</script>
